--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
-    "@fastify/static": "^6.11.2",
+    "@fastify/static": "^9.0.0",
     "better-sqlite3": "^9.4.1",
     "clsx": "^2.1.1",
     "fastify": "^4.27.2",
@@ -32,15 +32,14 @@
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^5.0.4",
-    "@storybook/addon-essentials": "^8.6.15",
-    "@storybook/addon-interactions": "^8.6.15",
-    "@storybook/react-vite": "^8.6.15",
-    "@storybook/test": "^8.6.15",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-essentials": "9.0.0-alpha.12",
+    "@storybook/addon-interactions": "9.0.0-alpha.10",
+    "@storybook/react-vite": "9.0.18",
+    "@storybook/test": "9.0.0-alpha.2",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
-    "storybook": "^8.6.15",
+    "storybook": "9.0.18",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.7.0",
     "typescript": "^5.4.3",
