--- a/package.json
+++ b/package.json
@@ -20,29 +20,30 @@
   },
   "dependencies": {
     "@fastify/static": "^9.0.0",
-    "better-sqlite3": "^9.4.1",
+    "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
-    "fastify": "^4.27.2",
+    "fastify": "^5.6.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/better-sqlite3": "^7.6.9",
+    "@types/node": "^22.0.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "@storybook/addon-essentials": "9.0.0-alpha.12",
     "@storybook/addon-interactions": "9.0.0-alpha.10",
-    "@storybook/react-vite": "9.0.18",
+    "@storybook/react-vite": "9.1.17",
     "@storybook/test": "9.0.0-alpha.2",
-    "autoprefixer": "^10.4.19",
-    "concurrently": "^8.2.2",
-    "postcss": "^8.4.38",
-    "storybook": "9.0.18",
-    "tailwindcss": "^3.4.4",
-    "tsx": "^4.7.0",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.0"
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
+    "postcss": "^8.5.6",
+    "storybook": "9.1.17",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0"
   }
 }
